--- a/templates/_pages/entry.html
+++ b/templates/_pages/entry.html
@@ -50,7 +50,7 @@
       <div class="blocks cf">
 
         {# Body matrix #}
-        {% include '_includes/body' %}
+        {% include '_includes/blocks' %}
 
       </div>
     </article>
