--- a/templates/journal/_entry.html
+++ b/templates/journal/_entry.html
@@ -11,18 +11,6 @@
 {% import '_includes/elements' as elements %}
 {% import '_includes/helpers' as helpers %}
 
-{% block head %}
-  {{ parent() }}
-
-  <link rel="amphtml" href="{{ entry.url }}/amp">
-{% endblock %}
-
-{% block critical %}
-  <style>
-    {{ source(_self ~ '.min.css', ignore_missing = true) }}
-  </style>
-{% endblock %}
-
 {% block main %}
   {% if entry.passphrase is empty or entry.passphrase == craft.app.request.getQueryParam('passphrase') or livePreview %}
     {% cache %}
@@ -32,21 +20,16 @@
 
       {# -- HEADER -- #}
       <header>
-        {% set image = entry.image.one() %}
-        {% if image %}
-        <div class="header__image js-photoswipe">
-          <figure>
-            <a href="{{ image.getUrl('large') }}" data-size="{{ image.getWidth('large') }}x{{ image.getHeight('large') }}">
-              {{ elements.image(image, null, '16x9') }}
-            </a>
-          </figure>
-        </div>
-        {% endif %}
-
         <div class="ctnr-s mv4">
           <div class="header w100 ta-center">
             <h1 class="header__title fs-t4">{{ entry.title | striptags() }}&nbsp;</h1>
-            <span class="header__meta mv2 fs-s1 ts-subtle">{{ elements.date(entry.postDate) }}{% if entry.category is not empty %}&nbsp;·&nbsp;{{ elements.category(entry) }}{% endif %}</span>
+            <span class="header__meta mv2 fs-s1 ts-subtle"><ul>
+
+              {% for tag in entry.tags %}
+                <li>{{ tag.title | capitalize }}</li>
+              {% endfor %}
+
+            </ul></span>
           </div>
         </div>
       </header>
@@ -54,13 +37,8 @@
       {# -- CONTENT -- #}
       <div class="blocks cf">
 
-        {# Post description #}
-        <div class="ctnr-s">
-          <h2 class="w100 fs-t1 fw-light">{{ entry.description }}</h2>
-        </div>
-
         {# Body matrix #}
-        {% include '_includes/blocks' %}
+        {{ entry.quill }}
 
       </div>
 
