--- a/templates/work/_entry.html
+++ b/templates/work/_entry.html
@@ -68,7 +68,7 @@
       <div class="blocks">
 
         {# Body matrix #}
-        {% include '_includes/body' %}
+        {% include '_includes/blocks' %}
 
       </div>
 
