--- a/source/css/dependencies/_choices.scss
+++ b/source/css/dependencies/_choices.scss
@@ -17,7 +17,7 @@ $choices-keyline-color: #DDDDDD !default;
 $choices-primary-color: #00BCD4 !default;
 $choices-disabled-color: #eaeaea !default;
 $choices-highlight-color: $choices-primary-color !default;
-$choices-button-icon-path: '../../icons/' !default;
+$choices-button-icon-path: '../../icons' !default;
 $choices-button-dimension: 8px !default;
 $choices-button-offset: 8px !default;
 
@@ -157,7 +157,7 @@ $choices-button-offset: 8px !default;
     border-radius: $choices-border-radius-item;
     padding: 4px 10px;
     font-size: $choices-font-size-sm;
-    font-weight: $fw-sans-normal;
+    font-weight: 500;
     margin-right: 3.75px;
     margin-bottom: 3.75px;
     background-color: $choices-primary-color;
