--- a/templates/blog/_amp.html
+++ b/templates/blog/_amp.html
@@ -6,7 +6,7 @@
  # http://craftcms.com/docs/routing
  #}
 
-{% extends "_layouts/amp" %}
+{% extends "_layouts/base" %}
 
 {% import '_includes/elements' as elements %}
 {% import '_includes/helpers' as helpers %}
@@ -53,7 +53,7 @@
         </div>
 
         {# Body matrix #}
-        {% include '_includes/body' %}
+        {% include '_includes/blocks' %}
 
       </div>
 
