--- a/source/css/home.scss
+++ b/source/css/home.scss
@@ -1,24 +1,39 @@
 /*
-  CHOICES
+  HOME
 
-  Form
+  Custom
+  Quill
   Choices
 */
+
 
 @import "dependencies/open-color";
 @import "base/variables";
 
+
+// Custom //
+
+
+
+
+// Quill //
+
+@import "dependencies/quill.snow";
+
+
+// Choices //
+
 $choices-font-size-lg: $fs-t3;
 $choices-font-size-md: $fs-0;
 $choices-font-size-sm: $fs-s1;
-$choices-guttering: 1rem;
-$choices-border-radius: .5rem;
-$choices-border-radius-item: .5rem;
-$choices-bg-color: $oc-white;
+$choices-guttering: $sp-small;
+$choices-border-radius: 4px;
+$choices-border-radius-item: 4px;
+$choices-bg-color: var(--oc-white);
 $choices-bg-color-disabled: $oc-gray-4;
-$choices-bg-color-dropdown: $oc-white;
+$choices-bg-color-dropdown: var(--oc-white);
 $choices-text-color: #333;
-$choices-keyline-color: $oc-gray-6;
+$choices-keyline-color: $oc-black;
 $choices-primary-color: $oc-one-6;
 $choices-disabled-color: $oc-gray-4;
 $choices-highlight-color: $choices-primary-color;
@@ -49,20 +64,20 @@ $choices-button-offset: .5rem;
 
   .#{$choices-selector}__input {
     padding: .5rem .75rem;
-    border-bottom: 2px solid $choices-keyline-color;
+    border-bottom: 1px solid $choices-keyline-color;
   }
 }
 
 .#{$choices-selector}[data-type*="select-multiple"], .#{$choices-selector}[data-type*="text"] {
   .#{$choices-selector}__button {
-    border-left: 2px solid darken($choices-primary-color, 10%);
+    border-left: 1px solid darken($choices-primary-color, 10%);
   }
 }
 
 .#{$choices-selector}__inner {
   min-height: 0;
   padding: .125rem .75rem 0;
-  border: 2px solid $choices-keyline-color;
+  border: 1px solid $choices-keyline-color;
   font-family: $ff-sans;
 
   .is-focused &,
@@ -80,31 +95,31 @@ $choices-button-offset: .5rem;
     margin-right: .25rem;
     margin-bottom: .25rem;
     padding: 0 .5rem;
-    border: 2px solid $oc-gray-4;
+    border: 1px solid $oc-gray-4;
     background-color: $oc-gray-2;
     color: $oc-gray-9;
 
     &.is-highlighted {
-      border: 2px solid $oc-one-6;
+      border: 1px solid $oc-one-6;
       background-color: $oc-gray-2;
     }
 
     .is-disabled & {
-      border: 2px solid darken($choices-disabled-color, 35%);
+      border: 1px solid darken($choices-disabled-color, 35%);
     }
   }
 }
 
 .#{$choices-selector}__list--dropdown {
-  margin-top: -2px;
-  border: 2px solid $choices-keyline-color;
+  margin-top: -1px;
+  border: 1px solid $choices-keyline-color;
 
   .is-open & {
     border-color: $oc-one-6;
   }
 
   .is-flipped & {
-    margin-bottom: -2px;
+    margin-bottom: -1px;
   }
 
   .#{$choices-selector}__item {
@@ -127,11 +142,11 @@ $choices-button-offset: .5rem;
 
 .#{$choices-selector}__heading {
   padding: .5rem;
-  border-bottom: 2px solid lighten($choices-keyline-color, 10%);
+  border-bottom: 1px solid lighten($choices-keyline-color, 10%);
 }
 
 .#{$choices-selector}__input {
-  background-color: $oc-white;
+  background-color: var(--oc-white);
   font-family: $ff-sans;
 }
 
