Live markdown rendering.

--- a/source/css/home.scss
+++ b/source/css/home.scss
@@ -32,8 +32,8 @@ $choices-border-radius-item: 4px;
 $choices-bg-color: var(--oc-white);
 $choices-bg-color-disabled: $oc-gray-4;
 $choices-bg-color-dropdown: var(--oc-white);
-$choices-text-color: #333;
-$choices-keyline-color: $oc-black;
+$choices-text-color: var(--oc-gray-8);
+$choices-keyline-color: transparent;
 $choices-primary-color: $oc-one-6;
 $choices-disabled-color: $oc-gray-4;
 $choices-highlight-color: $choices-primary-color;
