New markdown editor to match backend.

--- a/source/css/dependencies/_alertify.scss
+++ b/source/css/dependencies/_alertify.scss
@@ -45,12 +45,13 @@ $box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .2);
     }
 
     &.error {
-      background-color: $oc-one-7;
+      background-color: $oc-one-6;
       color: $oc-white;
     }
 
     &.success {
-      background-color: $oc-green-7;
+      background-color: $oc-teal-6;
+      color: $oc-white;
     }
   }
 
