--- a/templates/home.html
+++ b/templates/home.html
@@ -26,7 +26,8 @@
       		delay: 1000,
       	},
       	element: document.getElementById('markdown'),
-      	toolbar: false
+      	toolbar: false,
+        status: false,
       });
     }
   });
