--- a/source/css/elements/_header.scss
+++ b/source/css/elements/_header.scss
@@ -3,7 +3,7 @@
 */
 
 .header {
-  max-width: $mw-large / 7 * 5;
+  max-width: $mw-large / 1.618;
   font-size: $fs-t3;
   line-height: $lh-small;
 
